# Telecom_Test

./: .clang-format  CMakeLists.txt  Doxyfile  README.md  improvements.md
src/: main.cpp
src/bot/: bot.hpp  regular_bot.cpp  regular_bot.hpp
src/labyrinth/: labyrinth.cpp  labyrinth.hpp  labyrinth_types.cpp  labyrinth_types.hpp
src/manager/: game_manager.cpp  game_manager.hpp
src/utils/: calculator.hpp  config.hpp  types.hpp
tests/: CMakeLists.txt  bot_tests.cpp  labyrinth_tests.cpp  manager_tests.cpp
